// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select demo -- disabled 1`] = `
.c2 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  padding-right: 40px;
  box-sizing: border-box;
}

.c3 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.c0 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #6b798e;
  background-color: #fff;
  pointer-events: none;
  color: #bbb;
}

.c0 .c1 {
  height: 28px;
  line-height: 28px;
  border: 1px solid #c3cad9;
}

.c0 .c1:hover {
  border-color: #4683e6;
}

.c0 .c1 {
  background: #f7f7f7;
  border-color: #d9d9d9;
}

.c4 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #6b798e;
  background-color: #fff;
}

.c4 .c1 {
  height: 28px;
  line-height: 28px;
  border: 1px solid #c3cad9;
}

.c4 .c1:hover {
  border-color: #4683e6;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
      disabled=""
    >
      <div>
        <div
          class="c1 c2"
          disabled=""
        >
          <div>
            1
          </div>
          <i
            class="c3 uc-fe-icon icon__down "
            type="down"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c4"
    >
      <div>
        <div
          class="c1 c2"
        >
          <div>
            1
          </div>
          <i
            class="c3 uc-fe-icon icon__down "
            type="down"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select demo -- group 1`] = `
.c2 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  padding-right: 40px;
  box-sizing: border-box;
}

.c3 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.c4 .c1 {
  height: 28px;
  line-height: 28px;
  border: 1px solid #c3cad9;
}

.c4 .c1:hover {
  border-color: #4683e6;
}

.c4 .c1 {
  background: #f7f7f7;
  border-color: #d9d9d9;
}

.c0 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #6b798e;
  background-color: #fff;
}

.c0 .c1 {
  height: 28px;
  line-height: 28px;
  border: 1px solid #c3cad9;
}

.c0 .c1:hover {
  border-color: #4683e6;
}

<div>
  <div
    class="c0"
  >
    <div>
      <div
        class="c1 c2"
      >
        <div>
          2
        </div>
        <i
          class="c3 uc-fe-icon icon__down "
          type="down"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Select demo -- multiple 1`] = `
.c2 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  padding-right: 40px;
  box-sizing: border-box;
}

.c3 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.c4 .c1 {
  height: 28px;
  line-height: 28px;
  border: 1px solid #c3cad9;
}

.c4 .c1:hover {
  border-color: #4683e6;
}

.c4 .c1 {
  background: #f7f7f7;
  border-color: #d9d9d9;
}

.c0 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #6b798e;
  background-color: #fff;
}

.c0 .c1 {
  height: 28px;
  line-height: 28px;
  border: 1px solid #c3cad9;
}

.c0 .c1:hover {
  border-color: #4683e6;
}

<div>
  <div
    class="c0"
  >
    <div>
      <div
        class="c1 c2"
      >
        <div>
          已选择 2 项
        </div>
        <i
          class="c3 uc-fe-icon icon__down "
          type="down"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Select demo -- popover 1`] = `
.c2 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  padding-right: 40px;
  box-sizing: border-box;
}

.c3 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.c4 .c1 {
  height: 28px;
  line-height: 28px;
  border: 1px solid #c3cad9;
}

.c4 .c1:hover {
  border-color: #4683e6;
}

.c4 .c1 {
  background: #f7f7f7;
  border-color: #d9d9d9;
}

.c0 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #6b798e;
  background-color: #fff;
}

.c0 .c1 {
  height: 28px;
  line-height: 28px;
  border: 1px solid #c3cad9;
}

.c0 .c1:hover {
  border-color: #4683e6;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div>
        <div
          class="c1 c2"
        >
          <div>
            1
          </div>
          <i
            class="c3 uc-fe-icon icon__down "
            type="down"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div>
        <div
          class="c1 c2"
        >
          <div>
            1
          </div>
          <i
            class="c3 uc-fe-icon icon__down "
            type="down"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div>
        <div
          class="c1 c2"
        >
          <div>
            1
          </div>
          <i
            class="c3 uc-fe-icon icon__down "
            type="down"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div>
        <div
          class="c1 c2"
        >
          <div>
            1
          </div>
          <i
            class="c3 uc-fe-icon icon__down "
            type="down"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select demo -- renderContent 1`] = `
.c2 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  padding-right: 40px;
  box-sizing: border-box;
}

.c3 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.c4 .c1 {
  height: 28px;
  line-height: 28px;
  border: 1px solid #c3cad9;
}

.c4 .c1:hover {
  border-color: #4683e6;
}

.c4 .c1 {
  background: #f7f7f7;
  border-color: #d9d9d9;
}

.c0 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #6b798e;
  background-color: #fff;
}

.c0 .c1 {
  height: 28px;
  line-height: 28px;
  border: 1px solid #c3cad9;
}

.c0 .c1:hover {
  border-color: #4683e6;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div>
        <div
          class="c1 c2"
        >
          <div>
            <span
              style="color:red;"
            >
              1
            </span>
          </div>
          <i
            class="c3 uc-fe-icon icon__down "
            type="down"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select demo -- renderSelector 1`] = `
.c1 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #6b798e;
  background: #fff;
  border-color: #c3cad9;
}

.c1:hover {
  color: #4074e1;
  background: #fff;
  border-color: #4683e6;
}

.c0 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #6b798e;
  background-color: #fff;
}

.c0 .c2 {
  height: 28px;
  line-height: 28px;
  border: 1px solid #c3cad9;
}

.c0 .c2:hover {
  border-color: #4683e6;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c1"
          type="button"
        >
          <i
            class="uc-fe-button-icon uc-fe-icon icon__check "
            type="check"
          />
          一
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select demo -- search 1`] = `
.c2 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  padding-right: 40px;
  box-sizing: border-box;
}

.c3 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.c4 .c1 {
  height: 28px;
  line-height: 28px;
  border: 1px solid #c3cad9;
}

.c4 .c1:hover {
  border-color: #4683e6;
}

.c4 .c1 {
  background: #f7f7f7;
  border-color: #d9d9d9;
}

.c0 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #6b798e;
  background-color: #fff;
}

.c0 .c1 {
  height: 28px;
  line-height: 28px;
  border: 1px solid #c3cad9;
}

.c0 .c1:hover {
  border-color: #4683e6;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div>
        <div
          class="c1 c2"
        >
          <div>
            1
          </div>
          <i
            class="c3 uc-fe-icon icon__down "
            type="down"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div>
        <div
          class="c1 c2"
        >
          <div>
            1
          </div>
          <i
            class="c3 uc-fe-icon icon__down "
            type="down"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select demo -- select 1`] = `
.c10 {
  margin-right: 8px;
  font-size: 14px;
}

.c8 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c11 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c11 .c9 {
  color: #4074e1;
}

.c6 {
  position: relative;
  z-index: 1;
  margin-bottom: -8px;
}

.c6 .c7,
.c6 .style__RadioTagWrap-sc-25j3mq-3,
.c6 .style__RadioCardWrap-sc-25j3mq-8 {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c6 .c7:last-child,
.c6 .style__RadioTagWrap-sc-25j3mq-3:last-child,
.c6 .style__RadioCardWrap-sc-25j3mq-8:last-child {
  margin-right: 0;
}

.c6 .c28 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c6 .c28:first-child {
  border-radius: 2px 0 0 2px;
}

.c6 .c28:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c12 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
}

.c12 input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 4px 8px;
  margin: 0;
  border-radius: 2px;
  font-size: inherit;
  outline: none;
  color: inherit;
}

.c12 input {
  border: 1px solid #c3cad9;
  background: #fff;
  height: 28px;
}

.c12 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c12 input::-moz-placeholder {
  color: #abb4c3;
}

.c12 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c12 input::placeholder {
  color: #abb4c3;
}

.c12 input:hover {
  border-color: #4683e6;
}

.c12 input:focus {
  border-color: #4683e6;
}

.c12 .c29 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

.c25 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  padding-right: 40px;
  box-sizing: border-box;
}

.c26 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.c27 .c24 {
  height: 28px;
  line-height: 28px;
  border: 1px solid #c3cad9;
}

.c27 .c24:hover {
  border-color: #4683e6;
}

.c27 .c24 {
  background: #f7f7f7;
  border-color: #d9d9d9;
}

.c23 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #6b798e;
  background-color: #fff;
}

.c23 .c24 {
  height: 28px;
  line-height: 28px;
  border: 1px solid #c3cad9;
}

.c23 .c24:hover {
  border-color: #4683e6;
}

.c15 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c17 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c20 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c22 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c13 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c13:hover {
  border-color: #4683e6;
}

.c13 .c19 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c13 .c21 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c13 .c14 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c13 .c16,
.c13 .c18 {
  line-height: 16px;
}

.c13 .c16 {
  padding-right: 20px;
}

.c13 .c18 {
  padding-left: 20px;
}

.c13 .c16 {
  display: none;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

<div>
  <form
    class="demo-form uc-fe-form "
  >
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="3"
      >
        size
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            class="c7 c8"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle "
              type="circle"
            />
            sm
          </div>
          <div
            checked=""
            class="c7 c11"
          >
            <i
              class="c9 c10 uc-fe-icon icon__cbox-ed "
              type="cbox-ed"
            />
            md
          </div>
          <div
            class="c7 c8"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle "
              type="circle"
            />
            lg
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="3"
      >
        placeholder
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="9"
      >
        <span
          class="c12"
        >
          <input
            value="placeholder"
          />
        </span>
      </div>
    </div>
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="3"
      >
        multiple
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="9"
      >
        <div
          class="c13"
          value="false"
        >
          <div
            class="c14 c15"
          >
            <span
              class="c16 c17"
            >
              ON
            </span>
            <span
              class="c18 c17"
            >
              OFF
            </span>
            <span
              class="c19 c20"
            >
              <span
                class="c21 c22"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="3"
      >
        showSelectAll
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="9"
      >
        <div
          class="c13"
        >
          <div
            class="c14 c15"
          >
            <span
              class="c16 c17"
            >
              ON
            </span>
            <span
              class="c18 c17"
            >
              OFF
            </span>
            <span
              class="c19 c20"
            >
              <span
                class="c21 c22"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="3"
      >
        disabled
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="9"
      >
        <div
          class="c13"
          value="false"
        >
          <div
            class="c14 c15"
          >
            <span
              class="c16 c17"
            >
              ON
            </span>
            <span
              class="c18 c17"
            >
              OFF
            </span>
            <span
              class="c19 c20"
            >
              <span
                class="c21 c22"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="3"
      >
        search
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="9"
      >
        <div
          class="c13"
          value="false"
        >
          <div
            class="c14 c15"
          >
            <span
              class="c16 c17"
            >
              ON
            </span>
            <span
              class="c18 c17"
            >
              OFF
            </span>
            <span
              class="c19 c20"
            >
              <span
                class="c21 c22"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      class="c23"
      placeholder="placeholder"
    >
      <div>
        <div
          class="c24 c25"
        >
          <div>
            placeholder
          </div>
          <i
            class="c26 uc-fe-icon icon__down "
            type="down"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select demo -- showSelectAll 1`] = `
.c2 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  padding-right: 40px;
  box-sizing: border-box;
}

.c3 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.c4 .c1 {
  height: 28px;
  line-height: 28px;
  border: 1px solid #c3cad9;
}

.c4 .c1:hover {
  border-color: #4683e6;
}

.c4 .c1 {
  background: #f7f7f7;
  border-color: #d9d9d9;
}

.c0 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #6b798e;
  background-color: #fff;
}

.c0 .c1 {
  height: 28px;
  line-height: 28px;
  border: 1px solid #c3cad9;
}

.c0 .c1:hover {
  border-color: #4683e6;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div>
        <div
          class="c1 c2"
        >
          <div>
            请选择
          </div>
          <i
            class="c3 uc-fe-icon icon__down "
            type="down"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select demo -- size 1`] = `
.c2 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  padding-right: 40px;
  box-sizing: border-box;
}

.c3 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.c6 .c1 {
  height: 28px;
  line-height: 28px;
  border: 1px solid #c3cad9;
}

.c6 .c1:hover {
  border-color: #4683e6;
}

.c6 .c1 {
  background: #f7f7f7;
  border-color: #d9d9d9;
}

.c4 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #6b798e;
  background-color: #fff;
}

.c4 .c1 {
  height: 28px;
  line-height: 28px;
  border: 1px solid #c3cad9;
}

.c4 .c1:hover {
  border-color: #4683e6;
}

.c0 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #6b798e;
  background-color: #fff;
}

.c0 .c1 {
  height: 22px;
  line-height: 22px;
  border: 1px solid #c3cad9;
}

.c0 .c1:hover {
  border-color: #4683e6;
}

.c5 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #6b798e;
  background-color: #fff;
}

.c5 .c1 {
  height: 34px;
  line-height: 34px;
  border: 1px solid #c3cad9;
}

.c5 .c1:hover {
  border-color: #4683e6;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div>
        <div
          class="c1 c2"
        >
          <div>
            1
          </div>
          <i
            class="c3 uc-fe-icon icon__down "
            type="down"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c4"
    >
      <div>
        <div
          class="c1 c2"
        >
          <div>
            1
          </div>
          <i
            class="c3 uc-fe-icon icon__down "
            type="down"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c5"
    >
      <div>
        <div
          class="c1 c2"
        >
          <div>
            1
          </div>
          <i
            class="c3 uc-fe-icon icon__down "
            type="down"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select demo -- uncontrolled 1`] = `
.c2 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  padding-right: 40px;
  box-sizing: border-box;
}

.c3 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.c4 .c1 {
  height: 28px;
  line-height: 28px;
  border: 1px solid #c3cad9;
}

.c4 .c1:hover {
  border-color: #4683e6;
}

.c4 .c1 {
  background: #f7f7f7;
  border-color: #d9d9d9;
}

.c0 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #6b798e;
  background-color: #fff;
}

.c0 .c1 {
  height: 28px;
  line-height: 28px;
  border: 1px solid #c3cad9;
}

.c0 .c1:hover {
  border-color: #4683e6;
}

.c5 .c1 {
  height: 22px;
  line-height: 22px;
  border: 1px solid #c3cad9;
}

.c5 .c1:hover {
  border-color: #4683e6;
}

.c6 .c1 {
  height: 34px;
  line-height: 34px;
  border: 1px solid #c3cad9;
}

.c6 .c1:hover {
  border-color: #4683e6;
}

<div>
  <div
    class="c0"
  >
    <div>
      <div
        class="c1 c2"
      >
        <div>
          1
        </div>
        <i
          class="c3 uc-fe-icon icon__down "
          type="down"
        />
      </div>
    </div>
  </div>
</div>
`;
